--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>© 2025 Cloneify | Advanced Website Cloning Technology</p>
+        <p>© 2025 Clonify | Advanced Website Cloning Technology</p>
         <p class="developer">Developed by <a href="https://t.me/justozodbek" target="_blank">justozodbek</a>  - with 💜</p>
     </footer>
 
