--- a/index.html
+++ b/index.html
@@ -927,7 +927,7 @@
     <!-- Footer -->
     <footer class="footer">
         <p>© 2025 Clonify | Revolutionary Website Cloning Technology</p>
-        <p class="developer">Crafted with 💜 by <a href="https://t.me/justozodbek" target="_blank">justozodbek</a></p>
+        <p class="developer">Created with 💜 by <a href="https://t.me/justozodbek" target="_blank">justozodbek</a></p>
     </footer>
 
     <script src="background.js"></script>
